--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="absolute top-0 left-1/2 -translate-x-1/2 w-[1000px] h-[600px] bg-blue-600/10 blur-[120px] rounded-full -z-10"></div>
             <div class="max-w-7xl mx-auto text-center">
                 <h1 class="text-6xl md:text-8xl font-extrabold mb-6 leading-tight tracking-tighter uppercase">Lethal <span class="gradient-text">Aim</span></h1>
-                <p class="text-slate-400 text-lg max-w-2xl mx-auto mb-10">Ficheiros premium para a elite. Entrega garantida e suporte especializado.</p>
+                <p class="text-slate-400 text-lg max-w-2xl mx-auto mb-10">XITS DE QUALIDADES E CONFIANÇA SO NA LETHAL!.</p>
                 <div class="flex justify-center space-x-4">
                     <a href="#produtos" class="bg-blue-600 hover:bg-blue-700 text-white px-10 py-4 rounded-2xl font-bold transition shadow-xl shadow-blue-900/20 uppercase text-xs">Explorar Produtos</a>
                 </div>
